[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["macbook <kriukov@pos-credir.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.17.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
